--- a/index.html
+++ b/index.html
@@ -29,7 +29,27 @@
         <div class="text-section">
             <div class="name"> I AM SAMANTHA LOUISE</div>
             <div class="description"> A beginner developer, studying in Bicol University Polangui.<br>View below to know me better!</div>
-            
+
+            <div class="buttons">
+                <a href="#" id="btn" class="button primary">View CV</a>
+            </div>
+
+            <div id="cv-details" class="about-sector">
+                <div>
+                    <h1 class="complete-name">SAMANTHA LOUISE V. SOLA</h1>
+                        <p>Purok 1, Brgy. Biyong, City of Masbate</p>
+                        <p>09637493578</p>
+                        <a href="mailto:samanthalouisevillamor8@gmail.com">samanthalouisevillamor8@gmail.com</a> 
+                </div>
+                <hr>
+                <div>
+                    <h4>About Me</h4>
+                    <p>A hardworking and patient Web Developer college student in Bicol University Polangui,
+                        looking for a good opportunity where I can use my skills and learn more.
+                        I am dedicated and eager to learn, and I always do my best to improve and grow.
+                    </p>
+                </div>
+                <hr>
 
         <div class="img-section"> 
             <!--Also temporary-->
@@ -48,3 +68,4 @@
 
 </body>
 </html>
+
