--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
     <nav>
         <div> 
-            <!--The Photo is Temporary -->
             <img src="4bc9701a-1b09-410b-a80a-67bc09c65e72.jpg" alt="photo" class="logo-photo">
         </div>
         <div class="nav-bar"> Curriculum Vitae </div>
@@ -29,7 +28,7 @@
         <div class="text-section">
             <div class="name"> I AM SAMANTHA LOUISE</div>
             <div class="description"> A beginner developer, studying in Bicol University Polangui.<br>View below to know me better!</div>
-
+            
             <div class="buttons">
                 <a href="#" id="btn" class="button primary">View CV</a>
             </div>
@@ -49,10 +48,12 @@
                         I am dedicated and eager to learn, and I always do my best to improve and grow.
                     </p>
                 </div>
-                <hr>
+               
+                </div>
+            </div>
+        </div>
 
         <div class="img-section"> 
-            <!--Also temporary-->
             <img src="4bc9701a-1b09-410b-a80a-67bc09c65e72.jpg" alt="photo" class="my-photo">
         </div>
     </main>
@@ -68,4 +69,3 @@
 
 </body>
 </html>
-
