--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
             <div id="cv-details" class="about-sector">
                 <div>
                     <h1 class="complete-name">SAMANTHA LOUISE V. SOLA</h1>
+                        <h4>Address</h4>
                         <p>Purok 1, Brgy. Biyong, City of Masbate</p>
+                        <h4>Contact Number</h4>
                         <p>09637493578</p>
+                        <h4>Email Address</h4>
                         <a href="mailto:samanthalouisevillamor8@gmail.com">samanthalouisevillamor8@gmail.com</a> 
                 </div>
                 <hr>
@@ -69,3 +72,4 @@
 
 </body>
 </html>
+
