--- a/index.html
+++ b/index.html
@@ -51,7 +51,15 @@
                         I am dedicated and eager to learn, and I always do my best to improve and grow.
                     </p>
                 </div>
-               
+                <hr>
+                <div>
+                    <h4> Educational Background</h4>
+                    <b>High School</b> &nbsp;2018-2022
+                    <p>Masbate National Comprehensive High School<br>City of Masbate</p>
+                    <b>Senior High School</b> &nbsp;2022-2024
+                    <p>Masbate National Comprehensive High School<br>City of Masbate</p>
+                    <b>College</b> &nbsp;2024-2025
+                    <p>Bachelor of Science in Information System<br>Bicol University Polangui<br>Polangui, Albay</p>
                 </div>
             </div>
         </div>
@@ -72,4 +80,5 @@
 
 </body>
 </html>
+
 
