--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
                     <b>College</b> &nbsp;2024-2025
                     <p>Bachelor of Science in Information System<br>Bicol University Polangui<br>Polangui, Albay</p>
                 </div>
+                <hr>
+                <div>
+                    <h4>Skills</h4>
+                    <ul>
+                        <li>Basic HTML, CSS, C++, and Python</li>
+                        <li>Problem-solving</li>
+                        <li>Communication skills</li>
+                    </ul>
+                </div>
+                <hr>
+                <div>
+                    <h4>Hobbies</h4>
+                    <ul>
+                        <li>Dancing</li>
+                        <li>Singing</li>
+                        <li>Drawing and digital art</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
@@ -80,5 +98,6 @@
 
 </body>
 </html>
+
 
 
