--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                         <li>Basic HTML, CSS, C++, and Python</li>
                         <li>Problem-solving</li>
                         <li>Communication skills</li>
+                        <li>Time management and organization</li>
                     </ul>
                 </div>
                 <hr>
@@ -98,6 +99,7 @@
 
 </body>
 </html>
+
 
 
 
