--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <main class="main-content">
         <div class="text-section">
             <div class="name"> I AM SAMANTHA LOUISE</div>
-            <div class="description"> A beginner developer, studying in Bicol University Polangui.<br>View below to know me better!</div>
+            <div class="description">
+                A beginner developer, studying in Bicol University Polangui.<br>
+                View below to know me better!
+            </div>
             
             <div class="buttons">
                 <a href="#" id="btn" class="button primary">View CV</a>
@@ -36,32 +39,47 @@
             <div id="cv-details" class="about-sector">
                 <div>
                     <h1 class="complete-name">SAMANTHA LOUISE V. SOLA</h1>
-                        <h4>Address</h4>
-                        <p>Purok 1, Brgy. Biyong, City of Masbate</p>
-                        <h4>Contact Number</h4>
-                        <p>09637493578</p>
-                        <h4>Email Address</h4>
-                        <a href="mailto:samanthalouisevillamor8@gmail.com">samanthalouisevillamor8@gmail.com</a> 
+                    <h4>Address</h4>
+                    <p>Purok 1, Brgy. Biyong, City of Masbate</p>
+                    <h4>Contact Number</h4>
+                    <p>09637493578</p>
+                    <h4>Email Address</h4>
+                    <a href="mailto:samanthalouisevillamor8@gmail.com">
+                        samanthalouisevillamor8@gmail.com
+                    </a> 
                 </div>
+
                 <hr>
+
                 <div>
                     <h4>About Me</h4>
-                    <p>A hardworking and patient Web Developer college student in Bicol University Polangui,
+                    <p>
+                        A hardworking and patient Web Developer college student in Bicol University Polangui,
                         looking for a good opportunity where I can use my skills and learn more.
                         I am dedicated and eager to learn, and I always do my best to improve and grow.
                     </p>
                 </div>
+
                 <hr>
+
                 <div>
-                    <h4> Educational Background</h4>
+                    <h4>Educational Background</h4>
                     <b>High School</b> &nbsp;2018-2022
                     <p>Masbate National Comprehensive High School<br>City of Masbate</p>
+
                     <b>Senior High School</b> &nbsp;2022-2024
                     <p>Masbate National Comprehensive High School<br>City of Masbate</p>
+
                     <b>College</b> &nbsp;2024-2025
-                    <p>Bachelor of Science in Information System<br>Bicol University Polangui<br>Polangui, Albay</p>
+                    <p>
+                        Bachelor of Science in Information System<br>
+                        Bicol University Polangui<br>
+                        Polangui, Albay
+                    </p>
                 </div>
+
                 <hr>
+
                 <div>
                     <h4>Skills</h4>
                     <ul>
@@ -71,7 +89,9 @@
                         <li>Time management and organization</li>
                     </ul>
                 </div>
+
                 <hr>
+
                 <div>
                     <h4>Hobbies</h4>
                     <ul>
@@ -80,6 +100,18 @@
                         <li>Drawing and digital art</li>
                     </ul>
                 </div>
+
+                <hr>
+
+                <div>
+                    <h4>Character Reference</h4>
+                    <p>
+                        <strong>Jeffrey L. Almero</strong><br>
+                        Barangay Captain<br>
+                        Brgy. Biyong, City of Masbate
+                    </p>
+                </div>
+
             </div>
         </div>
 
@@ -91,15 +123,11 @@
     <script>
         $(document).ready(function() {
             $('#btn').click(function(e) {
-                e.preventDefault(); 
-                $('#cv-details').slideToggle(400); 
+                e.preventDefault();
+                $('#cv-details').slideToggle(400);
             });
         });
     </script>
 
 </body>
 </html>
-
-
-
-
